# CONEXAO

./: .gitignore  RATE_LIMITS_REFERENCE.md  README_PEDAGOGO.md  analyze_pedagogo.py  batch_processor.py  main.py  pedagogo_cleaned.csv  pedagogo_mapping.json  pedagogo_sample.csv  pyproject.toml  requirements.txt  testar_cerebras_sambanova.py  testar_gemini.py  testar_groq.py  testar_roundrobin.py
openai_agent/: __init__.py  __main__.py  agent.py  cerebras_agent.py  cerebras_provider.py  config.py  gemini_agent.py  gemini_provider.py  groq_agent.py  groq_key_rotator.py  groq_provider.py  model_selector.py  sambanova_agent.py  sambanova_provider.py  skills.py
